--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/graphql": "^0.13.4",
+    "@types/lodash": "^4.14.116",
     "@types/node": "^10.9.4",
     "@types/sequelize": "4.0.76",
     "gulp": "^3.9.1",
@@ -30,6 +31,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.0",
     "graphql-tools": "^3.1.1",
+    "lodash": "^4.17.11",
     "sequelize": "^4.38.0",
     "sqlite3": "^4.0.2"
   }
