--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development ./node_modules/.bin/nodemon --delay 5 dist/index",
+    "dev": "NODE_ENV=development JWT_SECRET=passw$rd ./node_modules/.bin/nodemon --delay 5 dist/index",
     "gulp": "./node_modules/.bin/gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +16,7 @@
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/graphql": "^0.13.4",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.9.4",
     "@types/sequelize": "4.0.76",
@@ -31,6 +32,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.0",
     "graphql-tools": "^3.1.1",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "sequelize": "^4.38.0",
     "sqlite3": "^4.0.2"
