--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.0",
+    "graphql-fields": "^1.1.0",
     "graphql-tools": "^3.1.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
