--- a/package.json
+++ b/package.json
@@ -6,24 +6,31 @@
   "scripts": {
     "dev": "NODE_ENV=development JWT_SECRET=passw$rd ./node_modules/.bin/nodemon --delay 5 dist/index",
     "gulp": "./node_modules/.bin/gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test JWT_SECRET=test-passw$rd mocha"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/chai": "^4.1.4",
+    "@types/chai-http": "^3.0.5",
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/graphql": "^0.13.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.9.4",
     "@types/sequelize": "4.0.76",
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-typescript": "^5.0.0-alpha.3",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
+    "ts-node": "^7.0.1",
     "typescript": "^3.0.3"
   },
   "dependencies": {
