--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "NODE_ENV=development JWT_SECRET=passw$rd ./node_modules/.bin/nodemon --delay 5 dist/index",
     "gulp": "./node_modules/.bin/gulp",
-    "test": "NODE_ENV=test JWT_SECRET=test-passw$rd mocha"
+    "test": "NODE_ENV=test JWT_SECRET=test-passw$rd mocha",
+    "coverage": "nyc --extension .ts --include 'src/**/*.ts' --reporter html npm test"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "gulp-typescript": "^5.0.0-alpha.3",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
+    "nyc": "^13.0.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3"
   },
