--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "NODE_ENV=development JWT_SECRET=passw$rd ./node_modules/.bin/nodemon --delay 5 dist/index",
     "gulp": "./node_modules/.bin/gulp",
+    "build": "npm run gulp",
+    "clusters": "NODE_ENV=development port=8080 node dist/clusters",
+    "start": "npm run build && npm run clusters",
     "test": "NODE_ENV=test JWT_SECRET=test-passw$rd mocha",
     "coverage": "nyc --extension .ts --include 'src/**/*.ts' --reporter html npm test"
   },
@@ -16,9 +19,12 @@
     "@types/bcryptjs": "^2.4.1",
     "@types/chai": "^4.1.4",
     "@types/chai-http": "^3.0.5",
+    "@types/compression": "0.0.36",
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/graphql": "^0.13.4",
+    "@types/helmet": "0.0.41",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/mocha": "^5.2.5",
@@ -37,12 +43,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.3",
+    "cors": "^2.8.4",
     "dataloader": "^1.4.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.0",
     "graphql-fields": "^1.1.0",
     "graphql-tools": "^3.1.1",
+    "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "sequelize": "^4.38.0",
